# DroneCore_Extensions

./: sftp-config.json
integration_tests/: hello_world.cpp
plugins/: CMakeLists.txt
plugins/onboardStatus/: CMakeLists.txt  onboardStatus.cpp  onboardStatus.h  onboardStatus_impl.cpp  onboardStatus_impl.h  onboardStatus_impl_test.cpp
